--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "ezyang/htmlpurifier": "*"
     },
     "require-dev": {
-      "cakephp/cakephp": "3.0.*-dev",
+      "cakephp/cakephp": "3.1.*",
       "phpunit/phpunit": "4.1.*"
     },
     "license": "MIT",
