--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
         "ezyang/htmlpurifier": "*"
     },
     "require-dev": {
-      "cakephp/cakephp": "3.1.*",
-      "phpunit/phpunit": "4.1.*"
+      "cakephp/cakephp": "~3.6",
+      "phpunit/phpunit": "^5.7.14|^6.0"
     },
     "license": "MIT",
     "authors": [
