--- a/.travis.yml
+++ b/.travis.yml
@@ -21,11 +21,11 @@ matrix:
   fast_finish: true
 
   include:
-    - php: 7.0
-      env: PHPCS=1 DEFAULT=0
+    php: 7.0
+    env: PHPCS=1 DEFAULT=0
 
-    - php: 7.1
-      env: PHPSTAN=1 DEFAULT=0
+    php: 7.1
+    env: PHPSTAN=1 DEFAULT=0
 
     php: 5.6
     env: COVERALLS=1 DEFAULT=0 DB=mysql db_dsn='mysql://travis@0.0.0.0/cakephp_test'
@@ -42,11 +42,11 @@ before_script:
   - sh -c "if [ '$COVERALLS' = '1' ]; then mkdir -p build/logs; fi"
 
 script:
-  - if [[ $DEFAULT = 1 && $TRAVIS_PHP_VERSION = 7.0 ]]; then export CODECOVERAGE=1; phpdbg -qrr vendor/bin/phpunit --coverage-clover=clover.xml; fi
-  - if [[ $DEFAULT = 1 && $TRAVIS_PHP_VERSION != 7.0 ]]; then vendor/bin/phpunit; fi
+  - sh -c "if [[ $DEFAULT = 1 && $TRAVIS_PHP_VERSION = 7.0 ]]; then export CODECOVERAGE=1; phpdbg -qrr vendor/bin/phpunit --coverage-clover=clover.xml; fi"
+  - sh -c "if [[ $DEFAULT = 1 && $TRAVIS_PHP_VERSION != 7.0 ]]; then vendor/bin/phpunit; fi"
 
-  - if [[ $PHPCS = 1 ]]; then composer cs-check; fi
-  - if [[ $PHPSTAN = 1 ]]; then composer require --dev "phpstan/phpstan:0.9.*" && vendor/bin/phpstan analyse -c phpstan.neon -l 2 src; fi
+  - sh -c "if [[ $PHPCS = 1 ]]; then composer cs-check; fi"
+  - sh -c "if [[ $PHPSTAN = 1 ]]; then composer require --dev "phpstan/phpstan:0.9.*" && vendor/bin/phpstan analyse -c phpstan.neon -l 2 src; fi"
 
 notifications:
   email: false
