--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ php:
   - 7.1
   - 7.2
 
-sudo: false
+dist: trusty
 
 env:
   matrix:
@@ -27,12 +27,9 @@ matrix:
     php: 7.1
     env: PHPSTAN=1 DEFAULT=0
 
-    php: 5.6
-    env: COVERALLS=1 DEFAULT=0 DB=mysql db_dsn='mysql://travis@0.0.0.0/cakephp_test'
-
 install:
   - composer self-update
-  - composer install --prefer-dist --no-interaction --dev
+  - composer install --prefer-dist --no-interaction
 
 before_script:
   - sh -c "if [ '$DB' = 'mysql' ]; then mysql -e 'CREATE DATABASE cakephp_test;'; fi"
