--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,11 @@
-#This Travis config template file was taken from https://github.com/FriendsOfCake/travis
 language: php
 
 php:
   - 5.6
   - 7.0
   - 7.1
-  - 7.2
 
-dist: trusty
+sudo: false
 
 env:
   matrix:
@@ -18,32 +16,44 @@ env:
     - DEFAULT=1
 
 matrix:
+  allow_failures:
+    - php: hhvm
+
   fast_finish: true
 
   include:
-    php: 7.0
-    env: PHPCS=1 DEFAULT=0
+    - php: 7.1
+      env: PHPCS=1 DEFAULT=0
 
-    php: 7.1
-    env: PHPSTAN=1 DEFAULT=0
+    - php: 7.1
+      env: COVERALLS=1 DEFAULT=0
 
-install:
-  - composer self-update
-  - composer install --prefer-dist --no-interaction
+    - php: hhvm
+      env: HHVM=1 DB=sqlite db_dsn='sqlite:///:memory:'
+
+    - php: hhvm
+      env: HHVM=1 DB=mysql db_dsn='mysql://travis@0.0.0.0/cakephp_test'
 
 before_script:
-  - sh -c "if [ '$DB' = 'mysql' ]; then mysql -e 'CREATE DATABASE cakephp_test;'; fi"
+  - composer self-update
+  - composer install --prefer-source --no-interaction --dev
+
+  - sh -c "if [ '$DB' = 'mysql' ]; then if [ '$DOCKER' = '1' ]; then apt-get -qq install -qq -y mysql-server && service mysql start; fi; mysql -e 'CREATE DATABASE cakephp_test;'; fi"
+
   - sh -c "if [ '$DB' = 'pgsql' ]; then psql -c 'CREATE DATABASE cakephp_test;' -U postgres; fi"
-  - sh -c "if [ '$PHPCS' = '1' ]; then composer require cakephp/cakephp-codesniffer:dev-master; fi"
+
+  - sh -c "if [ '$PHPCS' = '1' ]; then composer require 'cakephp/cakephp-codesniffer:dev-master'; fi"
+
   - sh -c "if [ '$COVERALLS' = '1' ]; then composer require --dev satooshi/php-coveralls:dev-master; fi"
   - sh -c "if [ '$COVERALLS' = '1' ]; then mkdir -p build/logs; fi"
 
-script:
-  - sh -c "if [[ $DEFAULT = 1 && $TRAVIS_PHP_VERSION = 7.0 ]]; then export CODECOVERAGE=1; phpdbg -qrr vendor/bin/phpunit --coverage-clover=clover.xml; fi"
-  - sh -c "if [[ $DEFAULT = 1 && $TRAVIS_PHP_VERSION != 7.0 ]]; then vendor/bin/phpunit; fi"
+  - command -v phpenv > /dev/null && phpenv rehash || true
 
-  - sh -c "if [[ $PHPCS = 1 ]]; then composer cs-check; fi"
-  - sh -c "if [[ $PHPSTAN = 1 ]]; then composer require --dev "phpstan/phpstan:0.9.*" && vendor/bin/phpstan analyse -c phpstan.neon -l 2 src; fi"
+script:
+  - sh -c "if [ '$COVERALLS' = '1' ]; then vendor/bin/phpunit --stderr --coverage-clover build/logs/clover.xml; fi"
+  - sh -c "if [ '$COVERALLS' = '1' ]; then php vendor/satooshi/php-coveralls/bin/php-coveralls -v; fi"
+  - sh -c "if [ '$DEFAULT' = '1' ]; then vendor/bin/phpunit --stderr; fi"
+  - sh -c "if [ '$PHPCS' = '1' ]; then vendor/bin/phpcs -n -p --extensions=php --standard=vendor/cakephp/cakephp-codesniffer/CakePHP --ignore=vendor,docs,tests/bootstrap.php,config/Migrations .; fi"
 
 notifications:
   email: false
