--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,13 @@
     "keywords": ["cakephp", "cakephp3", "plugin", "htmlpurifier", "purifier", "fields", "entities"],
     "homepage": "https://github.com/chrisShick/CakePHP3-HtmlPurifier",
     "require": {
-      "cakephp/cakephp": "~3.6",
+      "cakephp/cakephp": "^3.6",
       "php": ">=5.6.0",
       "ezyang/htmlpurifier": "*"
     },
     "require-dev": {
-      "phpunit/phpunit": "^5.7|^6.0",
-      "cakephp/cakephp-codesniffer": "dev-master"
+      "phpunit/phpunit": "^5.7.14|^6.0",
+      "cakephp/cakephp-codesniffer": "^3.0"
     },
     "license": "MIT",
     "authors": [
